--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
-  <!-- Put CSS Link here!-->
+ <link rel="stylesheet" type="text/css" href="css/style.css">
+ <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <title>CSS Practice</title>
 </head>
 <body>
